<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">BEM-VINDO</string>
    <string name="introduction">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>

    <string name="empresa">Empresa 1</string>
    <string name="negocio">Negócio</string>
    <string name="brasil">Brasil</string>
    <string name="pesquisa">Pesquisar</string>
    <string name="email_teste">testeapple@ioasys.com.br</string>
    <string name="senha_teste">12341234</string>
    <string name="pesquisar">Pesquisar</string>

</resources>