<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="clickLogin"
            type="android.view.View.OnClickListener" />

        <variable
            name="setProgressLOGIN"
            type="java.lang.Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/colorBackground"
        android:gravity="center"
        tools:context=".view.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:src="@drawable/logo_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/Loren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/introduction"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editText_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textPersonName"
            android:text="@string/email_teste"
            android:textColor="@android:color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/Loren"
            app:layout_constraintStart_toStartOf="@+id/Loren"
            app:layout_constraintTop_toBottomOf="@+id/Loren" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@string/senha_teste"
            android:textColor="@android:color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/editText_user_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_user_email"
            app:layout_constraintTop_toBottomOf="@+id/editText_user_email"
            app:layout_constraintVertical_bias="0.0" />

        <include
            android:id="@+id/LoginProgress"
            layout="@layout/progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{setProgressLOGIN? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@color/colorButton"
            android:elevation="5dp"
            android:onClick="@{clickLogin}"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editText_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_password"
            app:layout_constraintTop_toBottomOf="@+id/editText_password"
            app:layout_constraintVertical_bias="0.061" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>