<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="produto_item_list"
            type="br.com.myapplication.model.Enterprise" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imCompany"
            android:layout_width="70dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_detalhe" />

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{produto_item_list.enterprise_name}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imCompany"
            app:layout_constraintTop_toTopOf="@+id/imCompany"
            tools:text="@string/empresa" />

        <TextView
            android:id="@+id/tvBusiness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{produto_item_list.country}"
            android:textColor="@android:color/darker_gray"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/tvCompany"
            app:layout_constraintStart_toStartOf="@+id/tvCompany"
            app:layout_constraintTop_toBottomOf="@+id/tvCompany"
            tools:text="@string/negocio" />

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{produto_item_list.city}"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/imCompany"
            app:layout_constraintEnd_toEndOf="@+id/tvBusiness"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvBusiness"
            app:layout_constraintTop_toBottomOf="@+id/tvBusiness"
            tools:text="@string/brasil" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>